<resources>
    <string name="app_name">LinkUBank</string>
    <string name="LinkUBankLogo">LinkUBank</string>
    <string name="loginbutton">Login</string>
    <string name="forgotpass">Forgot password</string>
    <string name="signup">Sign up</string>
    <string name="txtViewUsername">Username</string>
    <string name="txtViewPassword">Password</string>
    <string name="btnlinkprof">Link your professionals</string>
    <string name="btncreatebudget">Create your budget</string>
    <string name="btnLinkProfWithConsult">Link your professionals \n with your consultant</string>
    <string name="btnManualBudget">Manually create your budget</string>
    <string name="btnBudgetWithConsult">Create your budget with \n your consultant</string>
    <string name="btnIncome">Income</string>
    <string name="btnExpenses">Expenses</string>
    <string name="btnViewReport">View Report</string>
    <string name="btnEmployer">Employer</string>
    <string name="btnChildSupport">Child Support</string>
    <string name="btnSelfEmployed">Self-Employed</string>
    <string name="btnRentalIncome">Rental Income</string>
    <string name="btnInvestIncome">Investment Income</string>
    <string name="btnBonusIncome">Bonus Income</string>
    <string name="btnCustomAdd">Custom Add</string>
    <string name="txtViewCompensationAmount">Please enter your compensation amount</string>
    <string name="txtViewChildSupportAmt">Please enter your amount support income</string>
    <string name="editTextEnterAmount">$0.00</string>
    <string name="btnSaveIncome">Save</string>
    <string name="btnSaveExpense">Save</string>

    <string name="txtViewHousingExpenses">Housing Expenses</string>
    <string name="txtViewRent">Rent</string>
    <string name="txtViewMortgage">Mortgage</string>
    <string name="txtViewTaxes">Taxes</string>
    <string name="txtViewHouseInsurance">House Insurance</string>

    <string name="txtViewGeneralExpenses">General Expenses</string>
    <string name="txtViewCarPayments">Car Payments</string>
    <string name="txtViewCarInsurance">Car Insurance</string>
    <string name="txtViewPhoneTVInternet">Phone/TV/Internet</string>
    <string name="txtViewUtilities">Utilities</string>
    <string name="txtViewCreditCardDebt">Credit Card Debt</string>
    <string name="txtViewCreditCardPayment">Credit Card Payment</string>
    <string name="txtViewBusinessDebts">Business Debts</string>
    <string name="txtViewBusinessPayments">BusinessPayments</string>

    <string name="txtViewGovTaxes">Taxes</string>
    <string name="txtViewFederal">Federal</string>
    <string name="txtViewState">State</string>
    <string name="txtViewLocal">Local</string>
    <string name="txtViewProperty">Property</string>

    <string name="txtViewEducationExpense">Education Expenses</string>
    <string name="txtViewStudentLoan">Student Loan</string>
    <string name="txtViewStudentLoanPayments">Student Loan Payments</string>
    <string name="txtViewTuition">Tuition</string>
    <string name="txtViewTuitionPayments">Tuition Payments</string>

    <string name="txtViewHealthExpense">Health Expenses</string>
    <string name="txtViewLifeInsurance">Life Insurance Payments</string>

    <string name="txtViewLifeExpenses">Life Expenses Monthly</string>
    <string name="txtViewFoodExpense">Food Expenses</string>
    <string name="txtViewLeisureExpense">Leisure Expenses</string>
    <string name="txtViewPersonalExpense">Personal Expenses</string>

    <string name="txtViewReportPage">Report</string>
    <string name="txtViewProjYearCash">Projected Yearly Cash</string>
    <string name="txtViewMonthCashAvail">Monthly Cash Availability</string>
    <string name="txtViewMonthIncome">Monthly Income</string>
    <string name="txtViewMonthExpense">Monthly Expense</string>

    <string name="txtViewCurrentDebtIncomeRatio">Current Debt-to-Income Ratio</string>
    <string name="txtViewTargetDebtIncomeRatio">Target Debt-to-Income Ratio</string>

</resources>
