<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".incomeSelection">

    <Button
        android:id="@+id/btnEmployer"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="34dp"
        android:background="@drawable/rounded_button_white"
        android:text="@string/btnEmployer"
        android:textColor="@color/blueText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnChildSupport"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/rounded_button_white"
        android:text="@string/btnChildSupport"
        android:textColor="@color/blueText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEmployer" />

    <Button
        android:id="@+id/btnSelfEmployed"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/rounded_button_white"
        android:text="@string/btnSelfEmployed"
        android:textColor="@color/blueText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnChildSupport" />

    <Button
        android:id="@+id/btnRentalIncome"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/rounded_button_white"
        android:text="@string/btnRentalIncome"
        android:textColor="@color/blueText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSelfEmployed" />

    <Button
        android:id="@+id/btnInvestIncome"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/rounded_button_white"
        android:text="@string/btnInvestIncome"
        android:textColor="@color/blueText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRentalIncome" />

    <Button
        android:id="@+id/btnBonusIncome"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/rounded_button_white"
        android:text="@string/btnBonusIncome"
        android:textColor="@color/blueText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnInvestIncome" />

    <Button
        android:id="@+id/btnCustomAdd"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/rounded_button_white"
        android:text="@string/btnCustomAdd"
        android:textColor="@color/blueText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBonusIncome" />


</android.support.constraint.ConstraintLayout>