<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".budgetStartSelect">

    <Button
        android:id="@+id/btnIncome"
        android:layout_width="314dp"
        android:layout_height="66dp"
        android:layout_marginEnd="21dp"
        android:layout_marginLeft="21dp"
        android:layout_marginRight="21dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/rounded_button_white"
        android:text="@string/btnIncome"
        android:textColor="@color/blueText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnExpenses"
        android:layout_width="314dp"
        android:layout_height="66dp"
        android:layout_marginEnd="21dp"
        android:layout_marginLeft="21dp"
        android:layout_marginRight="21dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_button_white"
        android:text="@string/btnExpenses"
        android:textColor="@color/blueText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIncome" />

    <Button
        android:id="@+id/btnViewReport"
        android:layout_width="314dp"
        android:layout_height="66dp"
        android:layout_marginEnd="21dp"
        android:layout_marginLeft="21dp"
        android:layout_marginRight="21dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_button_white"
        android:text="@string/btnViewReport"
        android:textColor="@color/blueText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnExpenses" />
</android.support.constraint.ConstraintLayout>